Layouts for list of questions and question details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:name=".HomeActivity"
             android:label="Paternidad Plus">
         </activity>
-        <activity android:name=".ListQuestionsActivity">
+        <activity android:name=".questions.ListQuestionsActivity">
         </activity>
     </application>
 
