Implementacion layout home:preguntas,categoria,tips

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,11 @@
         <activity android:name=".AnswerActivity">
         </activity>
         <activity
-            android:name=".CategoriesActivity"
-            android:label="@string/txt_categories">
+            android:name=".CategoriesActivity">
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:label="Paternidad Plus">
         </activity>
         <activity android:name=".ListQuestionsActivity">
         </activity>
