--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +19,7 @@
         <activity android:name=".QuestionActivity"></activity>
         <activity android:name=".AnswerActivity"></activity>
         <activity android:name=".CategoriesActivity"></activity>
-        <activity android:name=".HomeActivity" android:label="Paternidad Plus"></activity>
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".questions.ListQuestionsActivity"></activity>
         <activity android:name=".ProfileActivity"></activity>
         <!--  <activity android:name=".InterestActivity"></activity>
