--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,16 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:icon="@mipmap/logo_app"
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
@@ -19,9 +23,22 @@
         <activity android:name=".QuestionActivity"></activity>
         <activity android:name=".AnswerActivity"></activity>
         <activity android:name=".CategoriesActivity"></activity>
-        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".questions.ListQuestionsActivity"></activity>
         <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".HomeActivity">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
+        </activity>
+        <activity android:name=".SearchResultsActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
         <!--  <activity android:name=".InterestActivity"></activity>
           <activity android:name=".DialogInterestActivity"></activity>-->
     </application>
