--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rglucapstone.activefatherhood">
 
     <application
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:icon="@mipmap/logo_app"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+        <activity android:name=".activities.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".AskActivity"></activity>
-        <activity android:name=".QuestionActivity"></activity>
-        <activity android:name=".AnswerActivity"></activity>
-        <activity android:name=".CategoriesActivity"></activity>
-        <activity android:name=".questions.ListQuestionsActivity"></activity>
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name=".activities.LoginActivity"></activity>
+        <activity android:name=".activities.SignUpActivity"></activity>
+        <activity android:name=".activities.PreferencesActivity"></activity>
+        <activity android:name=".activities.HomeActivity">
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".SearchResultsActivity" />
         </activity>
-        <activity android:name=".SearchResultsActivity"
+        <activity android:name=".activities.AskActivity"></activity>
+        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity android:name=".activities.QuestionActivity"></activity>
+        <activity android:name=".activities.AnswerActivity"></activity>
+        <activity android:name=".activities.SearchResultsActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -39,8 +36,6 @@
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
-        <!--  <activity android:name=".InterestActivity"></activity>
-          <activity android:name=".DialogInterestActivity"></activity>-->
     </application>
 
 </manifest>
