Implementacion acciones del perfil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
+        <activity android:name=".activities.AskGuruActivity"></activity>
+        <activity android:name=".activities.EditProfileActivity"></activity>
     </application>
 
 </manifest>
