Comunicaciones via POST para guardar pregunta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
                 android:name="android.app.default_searchable"
                 android:value=".SearchResultsActivity" />
         </activity>
-        <activity android:name=".activities.AskActivity"></activity>
+        <activity android:name=".activities.AskActivity"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
         <activity android:name=".activities.ProfileActivity"></activity>
         <activity android:name=".activities.QuestionActivity"></activity>
         <activity android:name=".activities.AnswerActivity"></activity>
