--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         </activity>
         <activity android:name=".activities.ProfileActivity"></activity>
         <activity android:name=".activities.QuestionActivity"></activity>
-        <activity android:name=".activities.AnswerActivity"></activity>
+        <activity android:name=".activities.AnswerActivity"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
         <activity android:name=".activities.SearchResultsActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
