--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         <activity android:name=".activities.SignUpActivity"></activity>
         <activity android:name=".activities.PreferencesActivity"></activity>
         <activity android:name=".activities.HomeActivity">
-            <meta-data
+            <!--<meta-data
                 android:name="android.app.default_searchable"
-                android:value=".SearchResultsActivity" />
+                android:value=".SearchResultsActivity" />-->
         </activity>
         <activity android:name=".activities.AskActivity"
             android:windowSoftInputMode="adjustResize">
@@ -35,15 +35,17 @@
         <activity android:name=".activities.AnswerActivity"
             android:windowSoftInputMode="adjustResize">
         </activity>
-        <activity android:name=".activities.SearchResultsActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+        <activity android:name=".activities.SearchResultsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+            <!--android:label="@string/app_name"
+            android:theme="@style/AppTheme">-->
+
+            <!--<meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>-->
         </activity>
+        <!--<activity android:name=".fragments.SearchResultsFragment"></activity>-->
         <activity android:name=".activities.AskGuruActivity"></activity>
         <activity android:name=".activities.EditProfileActivity"></activity>
         <activity android:name=".activities.PublicationsGuru"></activity>
