--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,16 @@ android {
     }
 }
 
+/*To Facebook */
+repositories { mavenCentral() }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.curioustechizen.android-ago:library:1.3.0'
+
+    /* To Facebook */
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
 }
