Ajustes general en preguntas, publicaciones, y perfil de usuario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <activity android:name=".activities.PublicationsGuru"></activity>
         <activity android:name=".activities.PostActivity"></activity>
         <activity android:name=".activities.CommentActivity"></activity>
-        <activity android:name=".activities.DoPost"></activity>
+        <activity android:name=".activities.DoPostActivity"></activity>
         <activity android:name=".activities.CategoriesActivity"></activity>
         <activity android:name=".activities.CategorieItemActivity"></activity>
         <activity android:name=".activities.DirectQuestionsActivity"></activity>
